tests/csgrep/56-gcc-sparser-clang-error-stdin.txt
test.c:3:5: error: use of undeclared identifier 'test'
    test;
    ^
1 error generated.
